# Flnder

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  db.rs  exporter.rs  lib.rs  models.rs  parser.rs  settings.rs
