[package]
name = "app"
version = "0.1.0"
description = "Course Study Assistant"
authors = ["Codex"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
docx-rs = "0.4"
pdf-extract = "0.7"
quick-xml = "0.38"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tokio = { version = "1.48", features = ["fs", "macros", "process", "rt-multi-thread", "sync"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
zip = { version = "6.0", default-features = false, features = ["deflate"] }
